--- a/bundleapp/public/index.html
+++ b/bundleapp/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <link href="https://fonts.googleapis.com/css?family=Archivo:400,500,600,700|Cabin:400,600" rel="stylesheet"></link>
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta
       name="viewport"
